0.4.2, unreleased
    * Moved TypeHandler from the internal package to the API package

0.4.1, released 2008-10-19
    * Added two new type handlers, for byte[] and java.util.Locale.
    * Some methods were renamed in public interface DataSink
    * Fixed issue with wrong caching of setters used for setting pre-generated keys
    * Fixed issue with incorrect getters/setters lookup (didn't searched in inherited methods)
    * Fixed issue with handling arrays of primitive types

0.4.0, released 2008-09-27:
    * Added support for stored procedures calls (@Call annotation added)

0.3.3, released 2008-09-04:
    * Performance improvement.

0.3.2, released 2008-08-24:
    * Improved generics support. Now you can declare method with generic parameters
      in super-interface, with sub-interface providing all type arguments and Nanorm
      configuration.

0.3.1, released 2008-08-24:
    * Method findResultMap of InternalConfiguration made public for custom project. 
      This method could be used to retrieve mapping between properties names and
      column names.
